# CryptoGraph

./: .dockerignore  .gitignore  Dockerfile  EXTENDED-TEST-RESULTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  result.json  test-runner.ps1  test-runner.sh
config/: api_mappings.json  rules.json  rules_v2.json  source_sinks.json
docs/: CBOM-REFACTORING.md  DELIVERABLES.md  DIRECTORY.md  EXAMPLES.md  INTEGRATION.md  REFACTORING.md  architecture.md  notes.md  scale-notes.md
docs/en/: architecture.md  code-map.md  notes.md  pipeline.md  scale-notes.md  schema.md
docs/tr/: architecture.md  code-map.md  notes.md  pipeline.md  scale-notes.md  schema.md
samples/: adversarial_crypto_patterns.py  argon2_example.py  auth_flow.py  basic_symmetric.py  certificate_example.py  chacha20_example.py  complex_real_world.py  control_flow_variant.py  data_flow_chain.py  ecdsa_example.py  fernet_example.py  function_parameter_flow.py  gcm_mode_example.py  hardcoded_secrets.py  hash_example.py  hmac_example.py  insecure_aes.py  insecure_patterns.py  mega_crypto_application.py  obfuscated_key_material.py  pbkdf2_example.py  rsa_example.py  scrypt_example.py
src/cryptograph/: __init__.py  algorithm_normalizer.py  asset_classifier.py  ast_lite.py  cbom_builder.py  cbom_builder_v2.py  context_extractor.py  cpg_loader.py  cpg_visualizer.py  crypto_matcher.py  crypto_matcher_v2.py  cyclonedx_cbom.py  flow_analyzer.py  inference_explainer.py  main.py  manifest.py  models.py  utils.py  (+3 more)
tests/: test_cyclonedx_cbom.py  test_pipeline.py
viewer/: Dockerfile  viewer.py
(+2 files in other folders)
