[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptograph"
version = "0.1.0"
description = "Graph-based cryptographic asset discovery with CBOM-like output."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cryptograph = "cryptograph.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

